# Simple_CKKS

./: .gitignore  CKKSDecryptor.cpp  CKKSDecryptor.h  CKKSEncoder.cpp  CKKSEncoder.h  CKKSEncryptor.cpp  CKKSEncryptor.h  CMakeLists.txt  Context.cpp  Context.h  Keygen.cpp  Keygen.h  Polynomial.h  PolynomialSampler.cpp  PolynomialSampler.h  QPolynomial.cpp  QPolynomial.h  README.md  helper.h  main.cpp
.cache/clangd/index/: AngleAxis.h.118EDDFE88A40EE9.idx  ArrayBase.h.4326F390FEFAC482.idx  ArrayCwiseUnaryOps.h.D94DDC70E215B9C3.idx  ArrayWrapper.h.98E5F31AF06B4E1C.idx  Assign.h.71DCD442FF1C8D32.idx  AssignEvaluator.h.44428D34685D20BB.idx  AssignmentFunctors.h.B64A111B68C0CF4C.idx  BlasUtil.h.78E64C4713F6613D.idx  CKKSEncoder.cpp.18740E213B131AA7.idx  Cholesky.29E3DD745577B5E8.idx  ColPivHouseholderQR.h.D1671AE12DF54653.idx  CommaInitializer.h.B24D5E2E98AE1A7E.idx  CommonCwiseBinaryOps.h.535BE8F7AC82DEBE.idx  Complex.h.383E788E94D72886.idx  ComplexEigenSolver.h.63ABBC89EF16FFA8.idx  ComplexSchur.h.55A34E9833BE7A0F.idx  ConfigureVectorization.h.61111738EED6527D.idx  ConjHelper.h.D3C43CDE0445C4A0.idx  Context.cpp.072D50ACD68F734D.idx  Context.h.F17E0ACB967017DD.idx  CoreEvaluators.h.1356755EBD20782A.idx  CoreIterators.h.8DC8EA2AFC51A10C.idx  CwiseNullaryOp.h.A651F6B680CAA0B8.idx  CwiseUnaryOp.h.46B2AAEC91D926D0.idx  Dense.A0FE87CA72B77BA2.idx  DiagonalMatrix.h.811728765F016798.idx  DiagonalProduct.h.DB9227107F4E4633.idx  DisableStupidWarnings.h.6FF8561FD156E2CA.idx  Eigenvalues.648A5003CB4A7643.idx  (+75 more)
test/: CMakeLists.txt  test_ckksencoder.cpp  test_polynomial.cpp  test_polynomialsampler.cpp  test_qpolynomial.cpp
